fix overflow of group column in low detail mode

--- a/src/styles/taggle/_lod.scss
+++ b/src/styles/taggle/_lod.scss
@@ -38,6 +38,16 @@
       }
     }
 
+    [data-renderer=group] {
+      overflow: visible !important;
+
+      > * {
+        position: absolute;
+        left: 0;
+        right: 0;
+      }
+    }
+
     [data-renderer=number] > * {
       top: 0;
       bottom: 0;
